# wildlife-water-stress-atlas

./: .gitattributes  .gitignore  conftest.py  index.html  package-lock.json  package.json  packages.txt  playwright.config.ts  playwright.mapbox.config.ts  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
apps/mapbox/: index.html
apps/mapbox/css/: styles.css
apps/mapbox/data/: country_counts_gbif_acinonyx_jubatus.geojson  country_counts_gbif_crocodylus_niloticus.geojson  country_counts_gbif_equus_quagga.geojson  country_counts_gbif_giraffa_camelopardalis.geojson  country_counts_gbif_hippopotamus_amphibius.geojson  country_counts_gbif_hyperolius_marmoratus.geojson  country_counts_gbif_loxodonta_africana.geojson  country_counts_gbif_panthera_leo.geojson  country_counts_gbif_phoenicopterus_roseus.geojson  species_config.json  (+12 more)
apps/streamlit/: streamlit_app.py
data/processed/: gbif_acinonyx_jubatus.gpkg  gbif_crocodylus_niloticus.gpkg  gbif_equus_quagga.gpkg  gbif_giraffa_camelopardalis.gpkg  gbif_hippopotamus_amphibius.gpkg  gbif_hyperolius_marmoratus.gpkg  gbif_loxodonta_africana.gpkg  gbif_panthera_leo.gpkg  gbif_phoenicopterus_roseus.gpkg  gbif_syncerus_caffer.gpkg  gbif_xenopus_laevis.gpkg  water_africa.gpkg  water_africa_simplified.gpkg
docs/: WILDLIFE_WATER_STRESS_ATLAS_PROJECT_BIBLE.md
scripts/: check_count.py  download_jrc_gsw.py  export_country_aggregates.py  export_mapbox_data.py  load_data.py  plot_elephants.py  prefetch_gbif.py
src/wildlife_water_stress_atlas/: __init__.py
tests/: test_accessible_water.py  test_apply.py  test_cache.py  test_export_country_aggregates.py  test_export_mapbox_data.py  test_gbif.py  test_map.py  test_overlap.py  test_scoring.py  test_sidebar.py  test_spatial.py  test_species_config.py  test_stats.py  test_trends.py  test_water.py  test_water_real_data.py  test_water_sources.py  test_water_sources_raster.py
tests/e2e/: test_app.spec.ts  test_mapbox.spec.ts
(+18 files in other folders)
