[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildlife-water-stress-atlas"
version = "0.1.0"
description = "Geospatial decision-support platform for wildlife water stress analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pytest",
    "geopandas",
    "rasterio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=wildlife_water_stress_atlas --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"