[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildlife-water-stress-atlas"
version = "0.1.0"
description = "Geospatial decision-support platform for wildlife water stress analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pytest",
    "geopandas",
    "rasterio",
    "streamlit",
    "pydeck",
]

[tool.setuptools]
package-dir = {"" = "src", "apps" = "apps"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["wildlife_water_stress_atlas*", "apps*"]

[tool.pytest.ini_options]
addopts = "--cov=wildlife_water_stress_atlas --cov=apps --cov-report=term-missing --cov-fail-under=80 -m 'not integration'"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real data files on disk (skipped in CI)",
]

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"